--- a/Debugging/LevelSixViewController.xib
+++ b/Debugging/LevelSixViewController.xib
@@ -41,6 +41,9 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Only Tap on &quot;Complete Level&quot; once you've fixed the AutoLayout exception that shows up in the output window." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sf1-Rj-TbY">
                     <rect key="frame" x="20" y="240" width="280" height="80"/>
+                    <constraints>
+                        <constraint firstAttribute="width" priority="999" constant="280" id="WFt-ee-EXR"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
